Fixed overflow task
#16

--- a/SAM/web/src/main/resources/static/css/overview.css
+++ b/SAM/web/src/main/resources/static/css/overview.css
@@ -22,11 +22,12 @@
 }
 
 .projectTaskList {
-	height: 80px;
+	height: 79px;
 	width: 40%;
 	float: left;
 	position: relative;
 	top: 30px;
+	overflow: hidden;
 }
 
 .taskName {
